# Proiect-OOP

./: CMakeLists.txt  main.cpp  readme.md
Headers/: Inventory.h  Logger.h  MenuItem.h  Observable.h  Observer.h  Order.h  OrderProcessor.h  Product.h  Reservation.h  Restaurant.h  TUI.h  Table.h
Sources/: Inventory.cpp  Logger.cpp  MenuItem.cpp  Observable.cpp  Order.cpp  OrderProcessor.cpp  Reservation.cpp  Restaurant.cpp  TUI.cpp  Table.cpp
